--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,6 +47,29 @@ server {
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
+    # 🔹 ARQUIVOS EXTERNOS (MP4, MP3, PDF, DOCX)
+    location /arquivos/ {
+        alias /var/www/arquivos/;
+        autoindex off;
+
+        # Cache agressivo
+        expires 30d;
+        add_header Cache-Control "public, max-age=31536000";
+
+        # Permitir acesso por outros domínios (Angular, API, etc.)
+        add_header Access-Control-Allow-Origin *;
+
+        # Tipos MIME para os formatos
+        default_type application/octet-stream;
+        types {
+            video/mp4             mp4;
+            audio/mpeg            mp3;
+            application/pdf       pdf;
+            application/vnd.openxmlformats-officedocument.wordprocessingml.document docx;
+        }
+    }
+
+
     # 🔹 ARQUIVOS ESTÁTICOS DO DJANGO
     location /static/ {
         alias /static/;
