--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,90 +1,79 @@
-# 🔹 CONFIGURAÇÃO UPSTREAM DO BACKEND
 upstream backend_upstream {
     server backend:8000 max_fails=3 fail_timeout=30s;
 }
 
-# 🔹 RESOLVER DNS (importante para Docker)
 resolver 127.0.0.11 valid=30s;
 
+# HTTP: serve desafio ACME e redireciona o resto
 server {
     listen 80;
-    server_name _;
+    server_name cemos2028.site www.cemos2028.site;
 
-    # 🔹 FRONTEND (Angular)
+    # desafio ACME
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
+    # redirecionar tudo para HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS server
+server {
+    listen 443 ssl;
+    server_name cemos2028.site www.cemos2028.site;
+
+    ssl_certificate /etc/letsencrypt/live/cemos2028.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cemos2028.site/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # 🔹 BACKEND DJANGO - API
     location /api/ {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Timeouts e retry
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
-    # 🔹 BACKEND DJANGO - ADMIN
     location /admin {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Timeouts e retry
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
-    # 🔹 ARQUIVOS EXTERNOS (MP4, MP3, PDF, DOCX)
-    location /arquivos/ {
-        alias /var/www/arquivos/;
-        autoindex off;
-
-        # Cache agressivo
-        expires 30d;
-        add_header Cache-Control "public, max-age=31536000";
-
-        # Permitir acesso por outros domínios (Angular, API, etc.)
-        add_header Access-Control-Allow-Origin *;
-
-        # Tipos MIME para os formatos
-        default_type application/octet-stream;
-        types {
-            video/mp4             mp4;
-            audio/mpeg            mp3;
-            application/pdf       pdf;
-            application/vnd.openxmlformats-officedocument.wordprocessingml.document docx;
-        }
-    }
-
-
-    # 🔹 ARQUIVOS ESTÁTICOS DO DJANGO
     location /static/ {
         alias /static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
 
-    # 🔹 ERROS PADRÕES
+    location /arquivos/ {
+        alias /var/www/arquivos/;
+        autoindex off;
+        expires 30d;
+        add_header Cache-Control "public, max-age=31536000";
+        add_header Access-Control-Allow-Origin *;
+    }
+
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
     }
 
-    # 🔹 OTIMIZAÇÃO GZIP
     gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss image/svg+xml;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
 }
