--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,78 +1,97 @@
+# upstream backend_upstream {
+#     server backend:8000 max_fails=3 fail_timeout=30s;
+# }
+
+# resolver 127.0.0.11 valid=30s;
+
+# # HTTP server - para desenvolvimento local
+# server {
+#     listen 80;
+#     listen 8088;
+#     server_name localhost 127.0.0.1 cemos2028.site www.cemos2028.site;
+
+#     location / {
+#         root /usr/share/nginx/html;
+#         index index.html;
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     location /api/ {
+#         proxy_pass http://backend_upstream;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     location /admin {
+#         proxy_pass http://backend_upstream;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     location /static/ {
+#         alias /static/;
+#         expires 30d;
+#         add_header Cache-Control "public, no-transform";
+#     }
+
+#     location /arquivos/ {
+#         alias /var/www/arquivos/;
+#         autoindex off;
+#         expires 30d;
+#         add_header Cache-Control "public, max-age=31536000";
+#         add_header Access-Control-Allow-Origin *;
+#     }
+
+#     error_page 500 502 503 504 /50x.html;
+#     location = /50x.html {
+#         root /usr/share/nginx/html;
+#     }
+
+#     gzip on;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
+#     gzip_min_length 256;
+# }
+
+
 upstream backend_upstream {
     server backend:8000 max_fails=3 fail_timeout=30s;
 }
 
 resolver 127.0.0.11 valid=30s;
 
-# HTTP server - para desenvolvimento local
+# 🔹 HTTP - redireciona tudo para HTTPS
 server {
     listen 80;
-    listen 8088;
-    server_name localhost 127.0.0.1 cemos2028.site www.cemos2028.site;
-
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+    server_name cemos2028.site www.cemos2028.site;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
     }
-
-    location /api/ {
-        proxy_pass http://backend_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /admin {
-        proxy_pass http://backend_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /static/ {
-        alias /static/;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-    }
-
-    location /arquivos/ {
-        alias /var/www/arquivos/;
-        autoindex off;
-        expires 30d;
-        add_header Cache-Control "public, max-age=31536000";
-        add_header Access-Control-Allow-Origin *;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
-    gzip_min_length 256;
+    return 301 https://$host$request_uri;
 }
 
-HTTPS server (comentado para desenvolvimento local - descomente quando tiver certificados SSL)
+# 🔹 HTTPS - produção
 server {
     listen 443 ssl;
     server_name cemos2028.site www.cemos2028.site;
 
     ssl_certificate /etc/letsencrypt/live/cemos2028.site/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/cemos2028.site/privkey.pem;
-
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
+    # FRONTEND Angular
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
+    # BACKEND Django API
     location /api/ {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
@@ -81,6 +100,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # ADMIN
     location /admin {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
@@ -89,12 +109,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # DJANGO STATIC FILES
     location /static/ {
         alias /static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
 
+    # MEDIA / DOCUMENTS
     location /arquivos/ {
         alias /var/www/arquivos/;
         autoindex off;
