--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,18 +54,20 @@ services:
     restart: unless-stopped
     depends_on:
       - backend
-    ports:
-      - "80:80"
-      - "8088:8088"
-      - "443:443"
     volumes:
       - ./frontend/dist/frontend/browser:/usr/share/nginx/html
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
       - static_volume:/static
     networks:
       - app_network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.cemos2028.rule=Host(`cemos2028.site`,`www.cemos2028.site`)"
+      - "traefik.http.routers.cemos2028.entrypoints=websecure"
+      - "traefik.http.routers.cemos2028.tls=true"
+      - "traefik.http.services.cemos2028.loadbalancer.server.port=80"
 
 volumes:
   static_volume:
