--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,42 +56,22 @@
 #     gzip_min_length 256;
 # }
 
-
 upstream backend_upstream {
-    server backend:8000 max_fails=3 fail_timeout=30s;
+    server backend:8000;
 }
 
-resolver 127.0.0.11 valid=30s;
-
-# 🔹 HTTP - redireciona tudo para HTTPS
 server {
     listen 80;
-    server_name cemos2028.site www.cemos2028.site;
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        try_files $uri =404;
-    }
-    return 301 https://$host$request_uri;
-}
+    server_name _;
 
-# 🔹 HTTPS - produção
-server {
-    listen 443 ssl;
-    server_name cemos2028.site www.cemos2028.site;
-
-    ssl_certificate /etc/letsencrypt/live/cemos2028.site/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cemos2028.site/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
-    # FRONTEND Angular
+    # 🔹 Frontend Angular
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # BACKEND Django API
+    # 🔹 API Django
     location /api/ {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
@@ -100,7 +80,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # ADMIN
+    # 🔹 Admin Django
     location /admin {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
@@ -109,14 +89,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # DJANGO STATIC FILES
+    # 🔹 Arquivos estáticos
     location /static/ {
         alias /static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
 
-    # MEDIA / DOCUMENTS
+    # 🔹 Documentos e mídias
     location /arquivos/ {
         alias /var/www/arquivos/;
         autoindex off;
