--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,8 +56,10 @@
 #     gzip_min_length 256;
 # }
 
+resolver 127.0.0.11 valid=30s;
+
 upstream backend_upstream {
-    server backend:8000;
+    server cemos2028_backend:8000;  # mesmo nome definido no docker-compose
 }
 
 server {
