--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,7 +59,7 @@
 resolver 127.0.0.11 valid=30s;
 
 upstream backend_upstream {
-    server cemos2028_backend:8000;  # mesmo nome definido no docker-compose
+    server backend:8000;  # mesmo nome definido no docker-compose
 }
 
 server {
