--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,10 +8,11 @@ WORKDIR /app
 # Instalar dependências do sistema
 RUN apt-get update && apt-get install -y build-essential libpq-dev curl netcat-openbsd && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
+# Copia o arquivo de dependências do backend
+COPY backend/requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Copia tudo da pasta backend (pois o contexto será o repositório raiz)
+# Copia o código do backend inteiro
 COPY backend/ /app/
 
 EXPOSE 8000
