--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,14 +5,13 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
-# Instalar dependências do sistema
 RUN apt-get update && apt-get install -y build-essential libpq-dev curl netcat-openbsd && rm -rf /var/lib/apt/lists/*
 
-# Copia o arquivo de dependências do backend
+# Copia requirements e instala dependências
 COPY backend/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Copia o código do backend inteiro
+# Copia TODO o backend
 COPY backend/ /app/
 
 EXPOSE 8000
