--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,10 +22,5 @@ COPY . /app/
 EXPOSE 8000
 
 # Entrypoint padrão
-CMD sh -c "
-  echo '🚀 Iniciando Django com Gunicorn...' &&
-  python manage.py makemigrations --noinput &&
-  python manage.py migrate --noinput &&
-  python manage.py collectstatic --noinput &&
-  gunicorn django_cemos2028.wsgi:application --bind 0.0.0.0:8000
-"
+CMD ["sh", "-c", "echo '🚀 Iniciando Django com Gunicorn...' && python manage.py makemigrations --noinput && python manage.py migrate --noinput && python manage.py collectstatic --noinput && gunicorn django_cemos2028.wsgi:application --bind 0.0.0.0:8000"]
+
