--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,7 +58,7 @@
 
 resolver 127.0.0.11 valid=30s;
 upstream backend_upstream {
-    server cemos2028_backend:8000;
+    server backend:8000;
 }
 
 server {
