--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,78 +1,21 @@
-# upstream backend_upstream {
-#     server backend:8000 max_fails=3 fail_timeout=30s;
-# }
-
-# resolver 127.0.0.11 valid=30s;
-
-# # HTTP server - para desenvolvimento local
-# server {
-#     listen 80;
-#     listen 8088;
-#     server_name localhost 127.0.0.1 cemos2028.site www.cemos2028.site;
-
-#     location / {
-#         root /usr/share/nginx/html;
-#         index index.html;
-#         try_files $uri $uri/ /index.html;
-#     }
-
-#     location /api/ {
-#         proxy_pass http://backend_upstream;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-
-#     location /admin {
-#         proxy_pass http://backend_upstream;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-
-#     location /static/ {
-#         alias /static/;
-#         expires 30d;
-#         add_header Cache-Control "public, no-transform";
-#     }
-
-#     location /arquivos/ {
-#         alias /var/www/arquivos/;
-#         autoindex off;
-#         expires 30d;
-#         add_header Cache-Control "public, max-age=31536000";
-#         add_header Access-Control-Allow-Origin *;
-#     }
-
-#     error_page 500 502 503 504 /50x.html;
-#     location = /50x.html {
-#         root /usr/share/nginx/html;
-#     }
-
-#     gzip on;
-#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
-#     gzip_min_length 256;
-# }
-
-resolver 127.0.0.11 valid=30s;
 upstream backend_upstream {
-    server backend:8000;
+    server backend:8000 max_fails=3 fail_timeout=30s;
 }
 
+resolver 127.0.0.11 valid=30s;
+
+# HTTP server - para desenvolvimento local
 server {
     listen 80;
-    server_name _;
+    listen 8088;
+    server_name localhost 127.0.0.1 cemos2028.site www.cemos2028.site;
 
-    # 🔹 Frontend Angular
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # 🔹 API Django
     location /api/ {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
@@ -81,7 +24,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 🔹 Admin Django
     location /admin {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
@@ -90,14 +32,12 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 🔹 Arquivos estáticos
     location /static/ {
         alias /static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
 
-    # 🔹 Documentos e mídias
     location /arquivos/ {
         alias /var/www/arquivos/;
         autoindex off;
@@ -115,3 +55,63 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
 }
+
+# resolver 127.0.0.11 valid=30s;
+# upstream backend_upstream {
+#     server backend:8000;
+# }
+
+# server {
+#     listen 80;
+#     server_name _;
+
+#     # 🔹 Frontend Angular
+#     location / {
+#         root /usr/share/nginx/html;
+#         index index.html;
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     # 🔹 API Django
+#     location /api/ {
+#         proxy_pass http://backend_upstream;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     # 🔹 Admin Django
+#     location /admin {
+#         proxy_pass http://backend_upstream;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     # 🔹 Arquivos estáticos
+#     location /static/ {
+#         alias /static/;
+#         expires 30d;
+#         add_header Cache-Control "public, no-transform";
+#     }
+
+#     # 🔹 Documentos e mídias
+#     location /arquivos/ {
+#         alias /var/www/arquivos/;
+#         autoindex off;
+#         expires 30d;
+#         add_header Cache-Control "public, max-age=31536000";
+#         add_header Access-Control-Allow-Origin *;
+#     }
+
+#     error_page 500 502 503 504 /50x.html;
+#     location = /50x.html {
+#         root /usr/share/nginx/html;
+#     }
+
+#     gzip on;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
+#     gzip_min_length 256;
+# }
