--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,15 +64,9 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
-      - static_volume:/static
+      - static_volume:/app/static:ro      
     networks:
       - app_network
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.cemos2028.rule=Host(`cemos2028.site`,`www.cemos2028.site`)"
-      - "traefik.http.routers.cemos2028.entrypoints=websecure"
-      - "traefik.http.routers.cemos2028.tls=true"
-      - "traefik.http.services.cemos2028.loadbalancer.server.port=80"
 
 volumes:
   static_volume:
