--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 services:
+  # ==========================================
+  # 🔹 BACKEND DJANGO
+  # ==========================================
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    container_name: cemos2028_backend
     restart: unless-stopped
     working_dir: /app
     command: >
@@ -12,17 +16,23 @@ services:
         python manage.py collectstatic --noinput &&
         gunicorn django_cemos2028.wsgi:application --bind 0.0.0.0:8000
       "
+    ports:
+      - "8000:8000"          # ✅ Permite testes diretos do backend no host
     volumes:
       - ./backend:/app:rw
       - static_volume:/app/static
     environment:
-      - POSTGRES_DB=appdb
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST=db
-      - DJANGO_SUPERUSER_USERNAME=admin
-      - DJANGO_SUPERUSER_PASSWORD=admin123
-      - DJANGO_SUPERUSER_EMAIL=admin@example.com
+      # 🔹 Banco de dados
+      POSTGRES_DB: appdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_HOST: db
+      # 🔹 Superusuário Django
+      DJANGO_SUPERUSER_USERNAME: admin
+      DJANGO_SUPERUSER_PASSWORD: admin123
+      DJANGO_SUPERUSER_EMAIL: admin@example.com
+      # 🔹 Configurações opcionais
+      PYTHONUNBUFFERED: 1
     depends_on:
       db:
         condition: service_healthy
