--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,16 +21,16 @@ server {
         proxy_redirect off;
         proxy_http_version 1.1;
 
-        # Cabeçalhos essenciais
+        # 🔹 Repassa o Host correto (domínio público)
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # 🔹 Evita problemas com CORS / OPTIONS
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS";
-        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+        # 🔹 Libera CORS e pré-flight
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization" always;
 
         if ($request_method = OPTIONS) {
             add_header Access-Control-Allow-Origin *;
@@ -41,6 +41,8 @@ server {
             return 204;
         }
     }
+
+
 
     location /admin {
         proxy_pass http://backend_upstream;
