--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,33 +1,59 @@
+# ============================================================
+# 🔹 Upstream para o backend Django
+# ============================================================
 upstream backend_upstream {
-    server backend:8000 max_fails=3 fail_timeout=30s;
+    server backend:8000;
 }
 
 resolver 127.0.0.11 valid=30s;
 
-# HTTP server - para desenvolvimento local
+# ============================================================
+# 🔹 HTTP → redirect HTTPS
+# ============================================================
 server {
     listen 80;
-    listen 8088;
-    server_name localhost 127.0.0.1 cemos2028.site www.cemos2028.site;
+    server_name cemos2028.site www.cemos2028.site;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# ============================================================
+# 🔹 HTTPS principal
+# ============================================================
+server {
+    listen 443 ssl;
+    server_name cemos2028.site www.cemos2028.site;
+
+    # 🔐 Certificados gerados pelo Certbot
+    ssl_certificate /etc/letsencrypt/live/cemos2028.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cemos2028.site/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # 🔹 Raiz do Angular (frontend)
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # ============================================================
+    # 🔸 API Django
+    # ============================================================
     location /api/ {
         proxy_pass http://backend_upstream;
-        proxy_redirect off;
         proxy_http_version 1.1;
+        proxy_redirect off;
 
-        # 🔹 Repassa o Host correto (domínio público)
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # 🔹 Libera CORS e pré-flight
         add_header Access-Control-Allow-Origin * always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization" always;
@@ -42,28 +68,35 @@ server {
         }
     }
 
-
-
+    # ============================================================
+    # 🔸 Admin Django
+    # ============================================================
     location /admin {
         proxy_pass http://backend_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        include proxy_params;
     }
 
+    # ============================================================
+    # 🔸 Arquivos estáticos Django
+    # ============================================================
     location /static/ {
-        alias /static/;
+        alias /app/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
 
-    location /arquivos/ {
-        alias /var/www/arquivos/;
-        autoindex off;
-        expires 30d;
-        add_header Cache-Control "public, max-age=31536000";
-        add_header Access-Control-Allow-Origin *;
+    # ============================================================
+    # 🔸 Arquivos do Certbot
+    # ============================================================
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # ============================================================
+    # 🔸 SPA Angular (roteamento)
+    # ============================================================
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
     error_page 500 502 503 504 /50x.html;
@@ -75,6 +108,7 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
 }
+
 
 # resolver 127.0.0.11 valid=30s;
 # upstream backend_upstream {
