--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,9 @@
 services:
-  # ==========================================
-  # 🔹 BACKEND DJANGO
-  # ==========================================
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: cemos2028_backend
-    restart: unless-stopped
-    working_dir: /app
     command: >
       sh -c "
         python manage.py makemigrations --noinput &&
@@ -16,29 +11,22 @@ services:
         python manage.py collectstatic --noinput &&
         gunicorn django_cemos2028.wsgi:application --bind 0.0.0.0:8000
       "
-    ports:
-      - "8000:8000"          # ✅ Permite testes diretos do backend no host
     volumes:
-      - ./backend:/app:rw
+      - ./backend:/app
       - static_volume:/app/static
     environment:
-      # 🔹 Banco de dados
-      POSTGRES_DB: appdb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_HOST: db
-      # 🔹 Superusuário Django
-      DJANGO_SUPERUSER_USERNAME: admin
-      DJANGO_SUPERUSER_PASSWORD: admin123
-      DJANGO_SUPERUSER_EMAIL: admin@example.com
-      # 🔹 Configurações opcionais
-      PYTHONUNBUFFERED: 1
+      - POSTGRES_DB=appdb
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_HOST=db
+      - DJANGO_SUPERUSER_USERNAME=admin
+      - DJANGO_SUPERUSER_PASSWORD=admin123
+      - DJANGO_SUPERUSER_EMAIL=admin@example.com
     depends_on:
       db:
         condition: service_healthy
     networks:
       - app_network
-
 
   db:
     image: postgres:18
@@ -48,14 +36,13 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: appdb
-    # ✅ caminho atualizado para o Postgres 18+
     volumes:
-      - postgres_data:/var/lib/postgresql
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - app_network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
+      interval: 5s
       timeout: 5s
       retries: 5
 
@@ -64,17 +51,18 @@ services:
     image: nginx:latest
     container_name: cemos2028_nginx
     restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
     depends_on:
       - backend
+    ports:
+      - "80:80"
+      - "8088:8088"
+      - "443:443"
     volumes:
       - ./frontend/dist/frontend/browser:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
-      - static_volume:/app/static:ro      
+      - static_volume:/static
     networks:
       - app_network
 
