--- a/nginx/nginx copy.conf
+++ b/nginx/nginx copy.conf
@@ -9,7 +9,7 @@ resolver 127.0.0.11 valid=30s;
 server {
     listen 80;
     listen [::]:80;
-    server_name cemos2028.site www.cemos2028.site 195.200.1.112;
+    server_name cemos2028.com www.cemos2028.com 195.200.1.112;
 
     # 🔹 REDIRECIONAMENTO AUTOMÁTICO PARA HTTPS (caso use certbot)
     # return 301 https://$host$request_uri;
