--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@
 # server {
 #     listen 80;
 #     listen 8088;
-#     server_name localhost 127.0.0.1 cemos2028.site www.cemos2028.site;
+#     server_name localhost 127.0.0.1 cemos2028.com www.cemos2028.com;
 
 #     location / {
 #         root /usr/share/nginx/html;
@@ -65,17 +65,17 @@ resolver 127.0.0.11 valid=30s;
 # 🔹 HTTP - redireciona tudo para HTTPS
 server {
     listen 80;
-    server_name cemos2028.site www.cemos2028.site;
+    server_name cemos2028.com www.cemos2028.com;
     return 301 https://$host$request_uri;
 }
 
 # 🔹 HTTPS - produção
 server {
     listen 443 ssl;
-    server_name cemos2028.site www.cemos2028.site;
+    server_name cemos2028.com www.cemos2028.com;
 
-    ssl_certificate /etc/letsencrypt/live/cemos2028.site/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cemos2028.site/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/cemos2028.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cemos2028.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
