--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,7 +65,7 @@ resolver 127.0.0.11 valid=30s;
 # 🔹 HTTP - redireciona tudo para HTTPS
 server {
     listen 80;
-    server_name cemos2028.com www.cemos2028.com;
+    server_name cemos2028.com www.cemos2028.com auditapro.com www.auditapro.com;
     return 301 https://$host$request_uri;
 }
 
@@ -128,4 +128,34 @@ server {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
+}
+
+
+############################
+# AUDITAPRO.COM
+############################
+server {
+    listen 443 ssl;
+    server_name auditapro.com.br www.auditapro.com.br;
+
+    ssl_certificate /etc/letsencrypt/live/auditapro.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/auditapro.com.br/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    # FRONTEND 2
+    location / {
+        root /usr/share/nginx/audita;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # MESMA API DJANGO
+    location /api/ {
+        proxy_pass http://backend_upstream;
+        include proxy_params;
+    }
+
+    location /admin {
+        proxy_pass http://backend_upstream;
+        include proxy_params;
+    }
 }
