--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,16 @@ upstream backend_upstream {
     server cemos2028_backend:8000 max_fails=3 fail_timeout=30s;
 }
 
+upstream grafana_upstream {
+    server cemos2028_grafana:3000 max_fails=3 fail_timeout=30s;
+}
+
 resolver 127.0.0.11 valid=30s;
 
 # 🔹 HTTP - redireciona tudo para HTTPS
 server {
     listen 80;
-    server_name cemos2028.com www.cemos2028.com auditapro.com.br www.auditapro.com.br;
+    server_name cemos2028.com www.cemos2028.com auditapro.com.br www.auditapro.com.br grafana.cemos2028.com;
     return 301 https://$host$request_uri;
 }
 
@@ -65,6 +69,31 @@ server {
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
+    }
+
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
+    gzip_min_length 256;
+}
+
+server {
+    listen 443 ssl;
+    server_name grafana.cemos2028.com;
+
+    ssl_certificate /etc/letsencrypt/live/grafana.cemos2028.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/grafana.cemos2028.com/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    location / {
+        proxy_pass http://grafana_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     gzip on;
