--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Compiled output
 /utils
 
+# Environment variables
+.env
+
 # Django migrations (keep __init__.py only)
 **/migrations/**
 !**/migrations/__init__.py
