--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,12 +18,13 @@ server {
 # 🔹 HTTPS - produção
 server {
     listen 443 ssl;
-    server_name cemos2028.com www.cemos2028.com;
+    server_name cemos2028.com;
 
     ssl_certificate /etc/letsencrypt/live/cemos2028.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/cemos2028.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
     # FRONTEND Angular
     location / {
@@ -34,6 +35,23 @@ server {
 
     # BACKEND Django API
     location /api/ {
+        proxy_pass http://backend_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # BACKEND Django Auth pages (server-side templates)
+    location ~ ^/(logout|register|password-change|password-reset|reset)/ {
+        proxy_pass http://backend_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /auth/login/ {
         proxy_pass http://backend_upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -74,6 +92,19 @@ server {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
+}
+
+# Canonical host para SEO e cookies consistentes
+server {
+    listen 443 ssl;
+    server_name www.cemos2028.com;
+
+    ssl_certificate /etc/letsencrypt/live/cemos2028.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cemos2028.com/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    return 301 https://cemos2028.com$request_uri;
 }
 
 server {
