--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -21,6 +21,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Em desenvolvimento, a tela de login deve abrir no Angular dev server.
+    location = /login {
+        return 302 http://localhost:4200/login;
+    }
+
+    location = /login/ {
+        return 302 http://localhost:4200/login;
+    }
+
     # BACKEND Django API
     location /api/ {
         proxy_pass http://backend_upstream;
@@ -32,6 +41,23 @@ server {
         # Headers para desenvolvimento
         proxy_set_header Connection "upgrade";
         proxy_read_timeout 86400;
+    }
+
+    # BACKEND Django Auth pages (server-side templates)
+    location ~ ^/(logout|register|password-change|password-reset|reset)/ {
+        proxy_pass http://backend_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /auth/login/ {
+        proxy_pass http://backend_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # DASH (Plotly) via rota /dash/
